--- a/css/style.css
+++ b/css/style.css
@@ -12,20 +12,36 @@ header {
   flex-direction: column;
   width: 100%;
   background-color: #088A85;
-  height: 220px;
+  height: 240px;
   background-image: url("../bilde/bilde1");
 
 }
+
+
+
+
 img {
 
+
+border-width: 10px;
+border-style: solid;
+border-color: #088A85;
+border-radius: 5px;
   vertical-align: middle;
   margin-right: 10px;
 }
 
-main { display: flex;
+main {
+  margin-top: 230px;
+  position: relative;
+  display: flex;
   flex-direction: row;
   width: 100%
 
+     }
+
+     .grid-container p {
+       margin: 30px;
      }
 
 h1 {color: gray ;
@@ -78,10 +94,4 @@ text-shadow: 2px 2px 2px black;
     background-color: gray;
     z-index: 2;
     box-shadow: 2px 2px 1px 1px black;
-  }
-
-  .grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto;
   }
